# priyanshu-sharma

./: .gitignore  .pre-commit-config.yaml  Makefile  app.py  content.py  pyproject.toml  run.py  test.md
backend/server_config/: gunicorn_conf.py  settings.py  styles.py
components/: __init__.py  cards.py  layout.py
core/: app.py
docs/: start.md
infra/: Dockerfile  docker-compose.yml
pages/: __init__.py  blog.py  contact.py  experience.py  home.py  projects.py  resume.py  social.py
portfolio/: app.py  components.py  pages.py  styles.py
portfolio/resume/: resume.typ
server_config/: gunicorn_conf.py  health.py  styles.py
static/js/: theme.js
ui/components/: __init__.py  cards.py  layout.py  navigation.py
ui/pages/: __init__.py  blog.py  contact.py  experience.py  home.py  products.py  projects.py  resume.py  social.py
